--- a/PhoneBook.DAL/PhoneBook.DAL.csproj
+++ b/PhoneBook.DAL/PhoneBook.DAL.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Abyss\Desktop\Repositories\PhoneBook\PhoneBook.DAL.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="Data\" />
   </ItemGroup>
