--- a/PhoneBook.API/PhoneBook.API.csproj
+++ b/PhoneBook.API/PhoneBook.API.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Abyss\Desktop\Repositories\PhoneBook\PhoneBook.API\PhoneBook.API.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\Abyss\Desktop\Repositories\PhoneBook\PhoneBook.API.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
