--- a/PhoneBook.DAL/PhoneBook.DAL.csproj
+++ b/PhoneBook.DAL/PhoneBook.DAL.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Abyss\Desktop\Repositories\PhoneBook\PhoneBook.DAL.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
